# vikid

./: .gitignore  Cargo.toml  README.md  result.csv  result2.csv  viki.csv  viki_wmda.csv
src/: README.md  lib.rs  main.rs  viki.rs  wmda.rs
tests/: cli.rs  viki_response.txt
