[package]
name = "vikid"
authors = ["Xi Xiao <tdxiaoxi2@gmail.com>"]
version = "0.1.4"
edition = "2021"
description = "A commandline tool to retrieve TV Series that have Finnish subtitles from viki.com."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
csv = "1.3.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
httpmock = "0.7.0-rc.1"
predicates = "3.0.4"
